--- a/index.html
+++ b/index.html
@@ -309,7 +309,59 @@
                         </li>
                     </ul>
                 </div>
+                <div class="footer-modal-container">
+                    <p class="subscribe-title">Subscribe</p>
+                    <form class="footer-modal">
+                        <input class="footer-input" name="email_footer" id="email_footer" placeholder="E-mail"/>
+                        <label for="email_footer"></label>
+                        <button class="footer-button" type="submit">Subscribe<svg class="button-icon-footer" width="24" height="24"><use href="./images/icons.svg#icon-icon-send"></use></svg></button>
+                    </form>
+                </div>
             </div>
         </footer>
+        <div class="modal-overlay ">
+            <div class="modal">
+                <form class="form-modal">
+                    <div class="button-wrapper">
+                        <button class="icon-button" type="button"><svg class="icon-close" width="8" height="8"><use href="./images/icons.svg#icon-close-black"></use></svg></button>
+                        <p class="form-title">Leave your contacts and we will call you back</p>
+                    </div>
+                    <div class="input-container">
+                        <label class="input-text" for="user_name">Name</label>
+                       <div class="icon-modal-wrapper">
+                            <input class="input-name" type="text" name="user_name" id="user_name" />
+                            <svg class="icon-modal" width="18" height="18"><use href="./images/icons.svg#icon-person-black" ></use></svg>
+                       </div>
+                    </div>
+                    <div class="input-container">
+                        <label class="input-text" for="phone">Phone</label>
+                        <div class="icon-modal-wrapper">
+                            <input class="input-name" type="tel" name="phone" id="phone" />
+                            <svg class="icon-modal" width="18" height="24">
+                                <use href="./images/icons.svg#icon-phone-black"></use>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="input-container">
+                        <label class="input-text" for="user_phone">Email</label>
+                        <div class="icon-modal-wrapper">
+                            <input class="input-name" type="email" name="user_email" id="user_email"/>
+                            <svg class="icon-modal" width="18" height="24">
+                                <use href="./images/icons.svg#icon-email-black"></use>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="textarea-container">
+                        <label class="textarea-text" for="comment">Comment</label>
+                        <textarea class="textarea-name" name="comment" placeholder="Text input" id="comment"></textarea>
+                    </div>
+                    <div class="checkbox-container">
+                        <input class="checkbox-form visually-hidden" type="checkbox" name="privacy_policy" id="privacy_policy" value="true"/>
+                        <label class="checkbox-privacy" for="privacy_policy"><span><svg width="10" height="8" class="icon-vector"><use href="./images/icons.svg#icon-vector"></use></svg></span>I accept the terms and conditions of the <a class="text-privacy"> Privacy Policy</a></label>
+                    </div>
+                    <button class="button-form" type="submit">Send</button>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
