--- a/index.html
+++ b/index.html
@@ -312,14 +312,14 @@
                 <div class="footer-modal-container">
                     <p class="subscribe-title">Subscribe</p>
                     <form class="footer-modal">
-                        <input class="footer-input" name="email_footer" id="email_footer" placeholder="E-mail"/>
-                        <label for="email_footer"></label>
+                        <label class="footer-label" for="email_footer"></label>
+                        <input class="footer-input" type="email" name="email-footer" id="email_footer" placeholder="E-mail"/>
                         <button class="footer-button" type="submit">Subscribe<svg class="button-icon-footer" width="24" height="24"><use href="./images/icons.svg#icon-icon-send"></use></svg></button>
                     </form>
                 </div>
             </div>
         </footer>
-        <div class="modal-overlay ">
+        <div class="modal-overlay is-open">
             <div class="modal">
                 <form class="form-modal">
                     <div class="button-wrapper">
