--- a/index.html
+++ b/index.html
@@ -322,13 +322,13 @@
         <div class="modal-overlay is-open">
             <div class="modal">
                 <button class="icon-button" type="button"><svg class="icon-close" width="8" height="8"><use href="./images/icons.svg#icon-close-black"></use></svg></button>
+                <p class="form-title">Leave your contacts and we will call you back</p>
                 <form class="form-modal">
-                    <p class="form-title">Leave your contacts and we will call you back</p>
                     <div class="input-container">
-                        <label class="input-text" for="user_name">Name</label>
+                        <label class="input-text" for="user-name">Name</label>
                        <div class="icon-modal-wrapper">
-                            <input class="input-name" type="text" name="user_name" id="user_name" />
-                            <svg class="icon-modal" width="18" height="18"><use href="./images/icons.svg#icon-person-black" ></use></svg>
+                            <input class="input-name" type="text" name="user-name" id="user-name" />
+                            <svg class="icon-modal" width="18" height="24"><use href="./images/icons.svg#icon-person-black" ></use></svg>
                        </div>
                     </div>
                     <div class="input-container">
