--- a/index.html
+++ b/index.html
@@ -312,7 +312,9 @@
                 <div class="footer-modal-container">
                     <p class="subscribe-title">Subscribe</p>
                     <form class="footer-modal">
-                        <label class="footer-label" for="email_footer"><input class="footer-input" type="email" name="email-footer" id="email_footer" placeholder="E-mail" /></label>
+                        <label class="footer-label" for="email_footer">
+                            <input class="footer-input" type="email" name="email-footer" id="email_footer" placeholder="E-mail"/>
+                        </label>
                         <button class="footer-button" type="submit">Subscribe<svg class="button-icon-footer" width="24" height="24"><use href="./images/icons.svg#icon-icon-send"></use></svg></button>
                     </form>
                 </div>
@@ -325,22 +327,22 @@
                 <form class="form-modal">
                     <div class="input-container">
                         <label class="input-text" for="user-name">Name</label>
-                       <div class="icon-modal-wrapper">
-                            <input class="input-name" type="text" name="user-name" id="user-name" />
+                        <div class="icon-modal-wrapper">
+                            <input class="input-name" type="text" name="user-name" id="user-name"/>
                             <svg class="icon-modal" width="18" height="24"><use href="./images/icons.svg#icon-person-black" ></use></svg>
                        </div>
                     </div>
                     <div class="input-container">
                         <label class="input-text" for="phone">Phone</label>
                         <div class="icon-modal-wrapper">
-                            <input class="input-name" type="tel" name="phone" id="phone" />
+                            <input class="input-name" type="tel" name="phone" id="phone"/>
                             <svg class="icon-modal" width="18" height="24">
                                 <use href="./images/icons.svg#icon-phone-black"></use>
                             </svg>
                         </div>
                     </div>
                     <div class="input-container">
-                        <label class="input-text" for="user_phone">Email</label>
+                        <label class="input-text" for="user_email">Email</label>
                         <div class="icon-modal-wrapper">
                             <input class="input-name" type="email" name="user_email" id="user_email"/>
                             <svg class="icon-modal" width="18" height="24">
